chore: changed swagger and healthy router and added BearerAuth in the swagger interface
